[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reddit-mcp"
version = "0.1.0"
description = "MCP server for Reddit — read and write via the official API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "praw>=7.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
reddit-mcp = "reddit_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reddit_mcp"]
